# time_management

./: .gitignore  connect_to_notion.py  pushover.py  pyproject.toml  time_management_app.py
.devcontainer/: devcontainer.json
scr/: connect_to_notion.py
src/: connect_to_notion.py  connect_to_prim.py  constants.py  paths.py  utils.py
